--- a/assets/scss/stylesheet.scss
+++ b/assets/scss/stylesheet.scss
@@ -1,4 +1,11 @@
+// common 
 @import "common";
+
+// header
 @import "header";
+
+// footer
 @import "footer";
+
+// responsive
 @import "responsive";
