--- a/assets/scss/stylesheet.scss
+++ b/assets/scss/stylesheet.scss
@@ -1,4 +1,14 @@
+/* Common Css Code  */
 @import "common";
+
+/* Header Css Code  */
 @import "header";
+
+/* Service Page Css Code  */
+@import "service";
+
+/* Footer Css Code  */
 @import "footer";
+
+/* Responsive Css Code  */
 @import "responsive";
