--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,89 +1,109 @@
-
 /* footer css start */
-.footer{
-    background-color: #000000;
-    padding: 269px 0 67px;
+.footer {
+  padding: 269px 0 67px;
 }
 .footer__content {
-    display: flex;
-    align-items: center;
-    gap: 50px;
+  display: flex;
+  align-items: center;
+  gap: 50px;
 }
 .footer__content .footer__text,
-.footer__content .footer__items__wrapper{
-    width: 50%;
+.footer__content .footer__items__wrapper {
+  width: 50%;
 }
-.footer__hero__heading{
-    background: linear-gradient(to right, #D177A5 0%, #7A70E1 48%,#7EA9C2 100%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 109px;
-    line-height: 131px;
+.footer__hero__heading {
+  background: linear-gradient(to right, #d177a5 0%, #7a70e1 48%, #7ea9c2 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 109px;
+  line-height: 131px;
 }
-.footer__heading{
-    margin: 137px 0 30px;
-    font-style: normal;
-    color: #D4DBFC;
-    font-weight: 800;
-    font-size: 25px;
-    line-height: 30px;
+.footer__heading {
+  margin: 137px 0 30px;
+  font-style: normal;
+  color: #d4dbfc;
+  font-weight: 800;
+  font-size: 25px;
+  line-height: 30px;
 }
-.footer__info{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 25px;
-    line-height: 36px;
-    color: #6F6F6F;
+.footer__info {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 36px;
+  color: #6f6f6f;
 }
-.footer__items__inner{
-    display: flex;
-    align-items: flex-start;
-    gap: clamp(35px,6vw,105px);
-    max-width: 520px;
-    margin: 0 0 0 auto;
-    padding-bottom: 20px;
-    border-bottom: 0.8px solid #6F6F6F;
+.footer__items__inner {
+  display: flex;
+  align-items: flex-start;
+  gap: clamp(35px, 6vw, 105px);
+  max-width: 520px;
+  margin: 0 0 0 auto;
+  padding-bottom: 20px;
+  border-bottom: 0.8px solid #6f6f6f;
 }
-.item__heading{
-    font-style: normal;
-    font-weight: bold;
-    font-size: clamp(16px,2vw,25px);
-    line-height: clamp(19px,3vw,35px);
-    color: #D4DBFC;
-    margin-bottom: clamp(18px,2vw,30px);
+.item__heading {
+  font-style: normal;
+  font-weight: bold;
+  font-size: clamp(16px, 2vw, 25px);
+  line-height: clamp(19px, 3vw, 35px);
+  color: #d4dbfc;
+  margin-bottom: clamp(18px, 2vw, 30px);
 }
-.footer__items__inner .items ul li:not(:last-child){
-    margin-bottom: clamp(15px,2vw,20px);
+.footer__items__inner .items ul li:not(:last-child) {
+  margin-bottom: clamp(15px, 2vw, 20px);
 }
-.footer__items__inner .item{
-    font-style: normal;
-    color: #6F6F6F;
-    font-weight: 500;
-    font-size: clamp(16px,2vw,25px);
-    line-height: clamp(20px,3vw,36px);
+.footer__items__inner .item {
+  font-style: normal;
+  color: #6f6f6f;
+  font-weight: 500;
+  font-size: clamp(16px, 2vw, 25px);
+  line-height: clamp(20px, 3vw, 36px);
 }
+
+.footer__items__inner .item::after {
+  content: "";
+  background: linear-gradient(to right, #d177a5, #7a70e1, #7ea9c2);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 1.7px;
+  transition: 0.4s;
+}
+
+.footer__items__inner .item:hover {
+  background: linear-gradient(to right, #d177a5, #7a70e1, #7ea9c2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.footer__items__inner .item:hover::after {
+  width: 100%;
+}
+
 .footer__form {
-    max-width: 520px;
-    width: 100%;
-    margin: 93px 0 0 auto;
-    display: flex;
-    align-items: center;
-    border: 1px solid #fff;
-    border-radius: 10px;
+  max-width: 520px;
+  width: 100%;
+  margin: 93px 0 0 auto;
+  display: flex;
+  align-items: center;
+  border: 1px solid #fff;
+  border-radius: 10px;
 }
-.footer__form input{
-    padding: 17.5px 25px ;
-    background-color: #000000;
-    color: #FFFFFF;
-    border: none;
-    font-style: normal;
-    font-weight: 500;
-    font-size: clamp(16px,2vw,25px);
-    line-height: clamp(20px,3vw,36px);
-    border-radius: 10px;
+.footer__form input {
+  padding: 17.5px 25px;
+  background-color: #000000;
+  color: #ffffff;
+  border: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: clamp(16px, 2vw, 25px);
+  line-height: clamp(20px, 3vw, 36px);
+  border-radius: 10px;
 }
-.footer__form input:focus{
-    outline: none;
+.footer__form input:focus {
+  outline: none;
 }
