--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,26 +1,27 @@
 /* header css start */
-.header{
-    background-color: #000;
-    padding: 60px 0;
+.header {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  padding: 60px 0;
 }
-.header__inner{
-    display: flex;
-    align-items: center;
-    gap: 50px;
-    justify-content: space-between;
+.header__inner {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  justify-content: space-between;
 }
 .nav__list ul {
-    display: flex;
-    align-items: center;
-    gap: clamp(20px,8vw,143px);
+  display: flex;
+  align-items: center;
+  gap: clamp(20px, 8vw, 143px);
 }
 .nav__list ul li .nav__item,
-.contact__btn .nav__item
-{
-    color: #FFFFFF;
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 500;
-    font-style: normal;
+.contact__btn .nav__item {
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 500;
+  font-style: normal;
 }
-
