--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,7 +1,10 @@
 /* header css start */
 .header{
-    background-color: #000;
-    padding: 60px 0;
+    position: fixed;
+    top: 67px;
+    left: 0;
+    width: 100%;
+    z-index: 99;
 }
 .header__inner{
     display: flex;
@@ -31,4 +34,10 @@
 }
 .col-lg-hide{
     display: none;
+}
+.toggle__btn{
+    position: absolute;
+    top: 50%;
+    right: 30px;
+    transform: translateY(-50%);
 }
