--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -1,3 +1,126 @@
+// === RESPONSIVE CSS 1200PX START === //
+@media only screen and (max-width: 1200px) {
+    // footer responsive max-width 1200px
+    .footer{
+        padding: 50px 0;
+    }
+    .footer__content {
+        flex-direction: column;
+        margin-bottom: 45px;
+    }
+    .submit__btn button {
+        margin: 3px 3px 3px -3px;
+        width: 100%;
+    }
+    .footer__text ,
+    .footer__items__wrapper 
+    {
+        flex-direction: column;
+    }
+    .footer__text__inner,
+    .footer__items__inner,
+    form.footer__form 
+    {
+        width: 100%;
+        max-width: 100%;
+    }
+}
+// === RESPONSIVE CSS 1200PX END === //
+
+// === RESPONSIVE CSS 991PX START === //
+@media only screen and (max-width: 991px) {
+    .toggle__btn{
+        svg{
+            display: block;
+        }
+    }
+    .contact__btn{
+        display: none;    
+    }
+    .col-lg-hide{
+        display: block;
+    }
+    .header{
+        top: 0;
+        padding: 20px 0;
+        background-color: #000;
+    }
+    nav.nav__list {
+        position: absolute;
+        background-color: #000;
+        width: 100%;
+        right: 0;
+        top: 90px;
+        height: 100%;
+        min-height: 100vh;
+        z-index: 9;
+        left: auto;
+        padding: 30px;
+        transform: translateX(100%);
+        transition: 0.4s;
+    }
+    .nav__list.show{
+        transform: translateX(0);
+    }
+    .nav__list ul {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 50px;
+    }
+    .toggle__btn{
+        svg.cross{
+            path.first {
+                transform: translateX(100%);
+                opacity: 0;
+                transition: 0.4s;
+            }
+            path.second{
+                transform: translate(5px,-11px) rotate(45deg);
+                transition: 0.4s;
+            }
+            path.third{
+                transform: translate(0px,13px) rotate(-45deg);
+                transition: 0.4s;
+            }
+        }
+    }
+}
+// === RESPONSIVE CSS 991PX END === //
+
+// === RESPONSIVE CSS 767PX START === //
+@media only screen and (max-width: 767px) {
+    // footer responsive css 767px
+    .container{
+        padding: 0 30px;
+    }
+    .copywrite__text {
+        flex-direction: column-reverse;
+    }
+    .footer__text {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .footer__text .footer__text__inner {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+}
+// === RESPONSIVE CSS 767PX end === //
+
+// === RESPONSIVE CSS 576PX START === //
+@media only screen and (max-width: 576px){
+    .header__logo img {
+        width: 138px; 
+        height: 28px; 
+    }
+    nav.nav__list{
+        top: 72px;
+    }
+}
+// === RESPONSIVE CSS 576PX END === //
+
 // === RESPONSIVE CSS 480PX START === //
 @media only screen and (max-width: 480px){
     //footer responsive css 480px 
@@ -28,53 +151,5 @@
 }
 // === RESPONSIVE CSS 480PX END === //
 
-// === RESPONSIVE CSS 767PX START === //
-@media only screen and (max-width: 767px) {
-    // footer responsive css 767px
-    .container{
-        padding: 0 30px;
-    }
-    .copywrite__text {
-        flex-direction: column-reverse;
-    }
-    .footer__text {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .footer__text .footer__text__inner {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-}
-// === RESPONSIVE CSS 767PX end === //
 
-// === RESPONSIVE CSS 1200PX START === //
-@media only screen and (max-width: 1200px) {
-    // footer responsive max-width 1200px
-    .footer{
-        padding: 50px 0;
-    }
-    .footer__content {
-        flex-direction: column;
-        margin-bottom: 45px;
-    }
-    .submit__btn button {
-        margin: 3px 3px 3px -3px;
-        width: 100%;
-    }
-    .footer__text ,
-    .footer__items__wrapper 
-    {
-        flex-direction: column;
-    }
-    .footer__text__inner,
-    .footer__items__inner,
-    form.footer__form 
-    {
-        width: 100%;
-        max-width: 100%;
-    }
-}
-// === RESPONSIVE CSS 1200PX END === //
+
