--- a/assets/scss/stylesheet.scss
+++ b/assets/scss/stylesheet.scss
@@ -1,14 +1,17 @@
-// common 
+// common css
 @import "common";
 
-// header
+// header css
 @import "header";
 
-// header
+// industrie blockchain page css
 @import "industrie-blockchain";
 
-// footer
+// career page css
+@import "career";
+
+// footer css
 @import "footer";
 
-// responsive
+// responsive css
 @import "responsive";
