--- a/assets/scss/industrie-blockchain.scss
+++ b/assets/scss/industrie-blockchain.scss
@@ -1,45 +1,227 @@
-.industrie__banner{
+// banner sec css start
+.industrie__banner {
     background-color: #000;
     position: relative;
     padding: 243px 0 249px;
 
-    .breadcrums{
+    .breadcrums {
         margin-bottom: 62px;
-        a,span{
-            font-style: normal;
+
+        a,
+        span {
+
             font-weight: 500;
             font-size: 25px;
             line-height: 36px;
             color: #fff;
             transition: 0.4s;
 
-            &:hover{
+            &:hover {
                 background: linear-gradient(to right, #D177A5, #7A70E1, #7EA9C2);
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
             }
         }
-        .active__link{
+
+        .active__link {
             font-weight: 800;
             background: linear-gradient(to right, #D177A5, #7A70E1, #7EA9C2);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
     }
+
     .banner__inner {
         display: flex;
         align-items: center;
-        gap: 95px;
+        gap: clamp(30px, 7vw, 95px);
 
         .banner__text {
             width: 64%;
 
-            .sec__heading{
-                margin-bottom: clamp(20px,4vw,50px);
+            .sec__heading {
+                margin-bottom: clamp(20px, 4vw, 50px);
             }
         }
+
         .banner__image {
             width: 36%;
         }
     }
 }
+
+// banner sec css end
+
+// how its work sec start
+.how__its__work__sec {
+    padding: 48px 0 167px;
+    background-color: #000;
+
+    .sec__head {
+        margin-bottom: clamp(40px, 8vw, 142px);
+    }
+
+    .sec__content {
+        padding-left: clamp(20px, 8vw, 120px);
+        padding-right: clamp(20px, 8vw, 120px);
+
+        ul {
+            li {
+                display: flex;
+                align-items: center;
+                gap: clamp(10px, 2vw, 25px);
+                padding: 52px 0 77px;
+                border-top: 0.8px solid #D4DBFC;
+                transition: 0.4s;
+
+                &:first-child {
+                    gap: clamp(10px, 2vw, 35px);
+                }
+
+                &:last-child {
+                    padding-bottom: 0;
+                }
+
+                &:hover {
+                    span {
+                        color: #D4DBFC;
+                    }
+                }
+
+                .sec__brief {
+                    line-height: clamp(20px, 4vw, 51px);
+                    color: #BABFC5;
+                }
+
+                .info {
+                    font-weight: bold;
+                    font-size: clamp(16px, 2vw, 25px);
+                    line-height: clamp(20px, 3vw, 35px);
+                    color: #BABFC5;
+                }
+            }
+        }
+    }
+}
+
+// how its work sec end
+
+// faq sec css start
+.faq__sec{
+    padding: 207px 0 257px;
+    .container{
+        max-width: calc(1720px + 60px);
+        margin-left: clamp(0px,2vw,30px);
+    }
+    .sec__content{
+        .sec__content__inner{
+            display: flex;
+            align-items: flex-start;
+            gap: 10px;
+
+            .sec__heading{
+                margin-bottom: clamp(30px,5vw,69px);
+            }
+            .sec__image {
+                width: 40%;
+            }
+            .sec__text {
+                width: 63%;
+            }
+        }
+    }
+}
+.faq__item{
+    padding-top:clamp(15px,4vw,50px);
+    padding-bottom:clamp(15px,4vw,50px);
+    border-top: 1px solid #D4DBFC;
+}
+.faq__ques {
+    font-size: clamp(16px,2vw,25px);
+    line-height: clamp(20px,2vw,30px);
+    font-weight: 800;
+    color: #D4DBFC;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    cursor: pointer;
+}
+
+
+.faq__ans {
+    font-size: clamp(16px,2vw,25px);
+    line-height: clamp(20px,3vw,36px);
+    transition: 0.3s;
+    height: 0;
+    font-weight: 500;
+    overflow: hidden;
+    color: #6F6F6F;
+    margin-left: clamp(26px,3vw,34px);
+    padding-top: clamp(10px,1vw,15px);
+}
+
+.faq__ques span {
+    color: #6f6f6f;
+    margin-right: clamp(10px,1vw,15px);
+    display: block;
+    font-size: clamp(20px,2vw,24px);
+}
+
+.faq__ques.active span {
+    background: linear-gradient(to right,
+            #d177a5 0%,
+            #7a70e1 48%,
+            #7ea9c2 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.faq__ans.p__txt {
+    color: #6f6f6f;
+}
+
+.service__faq .container {
+    display: flex;
+    align-items: center;
+    gap: 221px;
+}
+
+.faq__heading {
+    font-size: 109px;
+    font-weight: 500;
+    color: #fff;
+}
+
+// faq sec css start
+// Contact our team sec start 
+.contact__our__team__sec {
+    background-color: #000;
+    padding: 98px 0 270px;
+
+    .sec__head {
+        margin-bottom: clamp(25px, 11vw, 195px);
+
+        .sec__heading {
+            border-bottom: 1px solid #D4DBFC;
+            padding-bottom: clamp(20px, 6vw, 92px);
+        }
+
+        .sec__brief {
+            margin-top: clamp(30px, 5vw, 81px);
+            padding-left: clamp(20px, 7vw, 120px);
+            padding-right: clamp(20px, 7vw, 120px);
+        }
+    }
+
+    .sec__content {
+        .contact__btn {
+            text-align: right;
+
+            .primary-btn {
+                padding: 12px 50px;
+            }
+        }
+    }
+}
+
+// Contact our team sec end
