--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -5,6 +5,10 @@
     box-sizing: border-box;
     font-family: 'ABC Diatype Trial';
 }
+body{
+    background-color: #0B0E1E;
+    font-style: normal;
+}
 .container{
     max-width: 1720px;
     width: 100%;
@@ -22,20 +26,39 @@ a{
     text-decoration: none;
     display: inline-block;
 }
+button{
+    background-color: transparent;
+    outline: none;
+    border: none;
+}
+main{
+    padding-top: 150px;
+}
+
 ::placeholder{
     color: #FFFFFF;
 }
+
 .sec__heading{
-    font-style: normal;
     font-weight: 800;
     font-size: clamp(41px,5vw,67px);
     line-height: clamp(51px,6vw,80px);
     color: #FFFFFF;
 }
 .sec__brief{
-    font-style: normal;
     font-weight: bold;
     font-size: clamp(25px,4vw,41px);
     line-height: clamp(35px,6vw,70px);
     color: #BABFC5;
+}
+
+
+.primary-btn{
+    color: #FFFFFF;
+    font-weight: 500;
+    font-size: 25px;
+    padding: 12px 25px;
+    background: #2940D3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
 }
