--- a/assets/scss/stylesheet.scss
+++ b/assets/scss/stylesheet.scss
@@ -7,6 +7,9 @@
 /* Service Page Css Code  */
 @import "service";
 
+/* Partner Page Css Code  */
+@import "partner";
+
 /* Footer Css Code  */
 // header
 @import "industrie-blockchain";
