--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -5,26 +5,16 @@
   box-sizing: border-box;
   font-family: "ABC Diatype Trial";
 }
+body {
+  background: #0b0e1e;
+}
 .container {
   max-width: 1720px;
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
 }
-img {
-  max-width: 100%;
-}
-li {
-  list-style: none;
-  display: block;
-}
-a {
-  text-decoration: none;
-  display: inline-block;
-}
-::placeholder {
-  color: #ffffff;
-}
+
 .sec__heading {
   font-style: normal;
   font-weight: 800;
@@ -38,4 +28,21 @@ a {
   font-size: clamp(25px, 4vw, 41px);
   line-height: clamp(35px, 6vw, 70px);
   color: #babfc5;
+}
+
+button {
+  cursor: pointer;
+}
+img {
+  max-width: 100%;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  display: inline-block;
+}
+::placeholder {
+  color: #ffffff;
 }
