--- a/assets/scss/responsive.scss
+++ b/assets/scss/responsive.scss
@@ -1,118 +1,3 @@
-// === RESPONSIVE CSS 480PX START === //
-@media only screen and (max-width: 480px) {
-  //footer responsive css 480px
-  .footer__text {
-    svg {
-      width: 71px;
-      height: 15px;
-    }
-  }
-  .footer__form {
-    border-radius: 4px;
-    .form__group {
-      border-radius: 4px;
-    }
-    input {
-      padding: 10px;
-    }
-    .submit__btn {
-      max-width: 27%;
-      width: 100%;
-      button {
-        padding: 8px 15px;
-        border-radius: 4px;
-        margin: 2px 2px 2px -2px;
-      }
-// === RESPONSIVE CSS 1200PX START === //
-@media only screen and (max-width: 1200px) {
-    // footer responsive max-width 1200px
-    .footer{
-        padding: 50px 0;
-    }
-    .footer__content {
-        flex-direction: column;
-        margin-bottom: 45px;
-    }
-    .submit__btn button {
-        margin: 3px 3px 3px -3px;
-        width: 100%;
-    }
-    .footer__text ,
-    .footer__items__wrapper 
-    {
-        flex-direction: column;
-    }
-    .footer__text__inner,
-    .footer__items__inner,
-    form.footer__form 
-    {
-        width: 100%;
-        max-width: 100%;
-    }
-}
-// === RESPONSIVE CSS 1200PX END === //
-
-// === RESPONSIVE CSS 991PX START === //
-@media only screen and (max-width: 991px) {
-    .toggle__btn{
-        svg{
-            display: block;
-        }
-    }
-    .contact__btn{
-        display: none;    
-    }
-    .col-lg-hide{
-        display: block;
-    }
-    .header{
-        top: 0;
-        padding: 20px 0;
-        background-color: #000;
-    }
-    nav.nav__list {
-        position: absolute;
-        background-color: #000;
-        width: 100%;
-        right: 0;
-        top: 90px;
-        height: 100%;
-        min-height: 100vh;
-        z-index: 9;
-        left: auto;
-        padding: 30px;
-        transform: translateX(100%);
-        transition: 0.4s;
-    }
-    .nav__list.show{
-        transform: translateX(0);
-    }
-    .nav__list ul {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 50px;
-    }
-    .toggle__btn{
-        svg.cross{
-            path.first {
-                transform: translateX(100%);
-                opacity: 0;
-                transition: 0.4s;
-            }
-            path.second{
-                transform: translate(5px,-11px) rotate(45deg);
-                transition: 0.4s;
-            }
-            path.third{
-                transform: translate(0px,13px) rotate(-45deg);
-                transition: 0.4s;
-            }
-        }
-    }
-  }
-}
-// === RESPONSIVE CSS 991PX END === //
-
 // === RESPONSIVE CSS 1440PX START === //
 @media only screen and (max-width: 1440px) {
   // Service responsive max-width 1400px
@@ -121,10 +6,24 @@
     height: 400px;
     margin-right: 160px;
   }
+  .sec__service.sec--industries .sec__content {
+    padding-top: 300px;
+  }
+  .tabs__content.industries--tabs {
+    top: 300px;
+  }
 
   // Faq responsive max-width 1400px
   .sec__service .service__faq .container {
     gap: 50px;
+  }
+
+  // Section Why Edge responsive max-width 1400px
+  .sec__why__edge .edge__features ul {
+    margin: 90px auto 0 500px;
+  }
+  .sec__why__edge {
+    padding-top: 300px;
   }
 }
 
@@ -160,8 +59,26 @@
   .sec__service .service__banner__img img {
     margin-right: 50px;
   }
+  .sec__why__edge .edge__features ul {
+    margin: 90px auto 0 300px;
+  }
+  .sec__why__edge {
+    padding-top: 400px;
+  }
+  .tabs__content.industries--tabs {
+    right: 50px;
+  }
 }
 // === RESPONSIVE CSS 1200PX END === //
+
+// === RESPONSIVE CSS 1024PX Start === //
+@media only screen and (max-width: 1024px) {
+  /* Service Responsive 1024px */
+  .sec__why__edge {
+    padding-top: 500px;
+  }
+}
+// === RESPONSIVE CSS 1024PX END === //
 
 // === RESPONSIVE CSS 991PX Start === //
 @media only screen and (max-width: 991px) {
@@ -183,10 +100,28 @@
     width: 50%;
   }
   .sec__service .sec__text {
-    width: 40%;
+    padding-right: 0;
+  }
+  .sec__why__edge .edge__features ul {
+    margin: 90px 0 0;
+    max-width: 100%;
+  }
+  .sec__why__edge .edge__features ul li {
+    margin-bottom: 30px;
+  }
+  .sec__service .faq__heading {
+    font-size: 50px;
+  }
+  .sec__service .sec__text {
+    width: 38%;
   }
 }
 
+// Section Best Solution 991px */
+.sec__best__solution .sec__heading {
+  font-size: 40px;
+  padding-bottom: 50px;
+}
 // === RESPONSIVE CSS 991PX end === //
 
 // === RESPONSIVE CSS 767PX START === //
@@ -243,7 +178,12 @@
   .sec__service .sec__text {
     position: inherit;
   }
-  .tabs__button {
+  .industries__tabs__button {
+    text-align: start;
+    position: relative;
+  }
+  .tabs__button,
+  .industries__tabs__button {
     border-bottom: 1px solid #d4dbfc !important;
     width: 100%;
     padding-bottom: 25px;
@@ -251,18 +191,25 @@
   }
 
   .tabs__button::after,
+  .industries__tabs__button::before,
+  .industries__tabs__button::after,
   .tabs__button::before {
     content: "";
     position: absolute;
     right: 0;
-    top: 50%;
+    top: calc(50% - 12.5px);
     transform: translateY(-50%);
     height: 2px;
     width: 16px;
     background-color: #babfc5;
   }
-  .tabs__button.active::before {
+  .tabs__button::before,
+  .industries__tabs__button::before {
     transform: rotate(90deg);
+  }
+  .tabs__button.active::before,
+  .industries__tabs__button.active::before {
+    transform: rotate(0deg);
   }
 
   .tabs__item .sec__img,
@@ -275,7 +222,14 @@
   }
 
   .service__bottom__img svg {
-    height: 229px;
+    height: auto;
+    transform: scale(1.5);
+    padding-block: 50px;
+  }
+  .service__bottom__img {
+    width: calc(100% + 60px) !important;
+    margin-left: -30px;
+    overflow: hidden;
   }
   .sec__service .service__faq {
     padding-top: 51px;
@@ -287,10 +241,10 @@
     padding-bottom: 30px;
   }
   .sec__service .tabs__button {
-    margin-bottom: 15px;
+    margin-bottom: 28px;
   }
   .sec__service .sec__heading {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
   .sec__service .tabs__content .sec__item li {
     margin-bottom: 15px;
@@ -298,56 +252,217 @@
   .sec__service .faq__ques {
     padding: 10px 0;
   }
+
+  // === Industries CSS 767PX end === //
+  .tabs__content.industries--tabs {
+    position: initial;
+    max-width: 100%;
+  }
+  .sec__service.sec--industries .sec__text {
+    width: 100%;
+  }
+
+  .sec__service.sec--industries .sec__text {
+    padding-right: 0;
+  }
+  .tabs__content.industries--tabs {
+    margin-bottom: 40px;
+  }
+  .sec__why__edge {
+    padding-top: 60px;
+  }
+  .sec__why__edge .edge__features ul li {
+    margin-bottom: 20px;
+  }
+
+  .sec__service .sec__item ul {
+    margin-left: 10px;
+  }
+  .sec__service .sec__content {
+    padding-top: 150px;
+  }
+
+  .sec__why__edge {
+    padding-bottom: 100px;
+  }
+  .sec__service .tabs__button,
+  .sec__service .industries__tabs__button {
+    font-size: 20px;
+  }
+  .sec__service.sec--industries .sec__content {
+    padding-top: 100px;
+  }
+  .sec__service .tabs__content .sec__heading,
+  .sec__service .tabs__content .sec__brief {
+    font-size: 30px;
+  }
+  .sec__service .tabs__content .sec__item li {
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .faq__ques {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 30px;
+  }
+  .faq__ans {
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 400;
+  }
+  .sec__service .faq__heading {
+    font-size: 45px;
+  }
+  .sec__why__edge .sec__heading {
+    padding-bottom: 50px;
+  }
+  .sec__why__edge .edge__features ul {
+    margin-top: 60px;
+  }
+  .sec__why__edge .edge__features ul li {
+    font-size: 20px;
+  }
+  .sec__service .tabs__content {
+    max-width: 100%;
+  }
+  .tabs__content.industries--tabs .tabs__heading {
+    font-size: 25px;
+  }
+  .sec__service .sec__text {
+    width: 100%;
+    padding-right: 0;
+  }
+  // Section Best Solution 767px */
+  .sec__best__solution .sec__heading {
+    font-size: 30px;
+    padding-bottom: 30px;
+  }
+  .sec__best__solution .sec__best__solution__items {
+    padding-top: 100px;
+  }
+  .sec__best__solution .sec__best__solution__items li {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+  .sec__best__solution {
+    padding-bottom: 100px;
+  }
 }
 // === RESPONSIVE CSS 767PX end === //
 
 // === RESPONSIVE CSS 575PX START === //
 @media only screen and (max-width: 575px) {
   // Service responsive css 575px
-}
+  .header__logo img {
+    width: 138px;
+    height: 28px;
+  }
+  nav.nav__list {
+    top: 72px;
+  }
+  .sec__why__edge {
+    padding-bottom: 57px;
+  }
+  .sec__service .tabs__button,
+  .sec__service .industries__tabs__button {
+    font-size: 16px;
+  }
+  .sec__service .tabs__content .sec__heading,
+  .sec__service .tabs__content .sec__brief {
+    font-size: 25px;
+    line-height: 35px;
+  }
+  .sec__service .tabs__content .sec__item li {
+    font-size: 16px;
+  }
+  .faq__ques,
+  .faq__ans {
+    font-size: 16px !important;
+    font-weight: 700;
+    line-height: 20px;
+  }
+  .sec__service .faq__heading {
+    font-size: 41px;
+  }
+  .sec__why__edge .sec__heading {
+    padding-bottom: 40px;
+  }
+  .sec__why__edge .edge__features ul {
+    margin-top: 50px;
+  }
+  .sec__why__edge .edge__features ul li {
+    font-size: 16px;
+    font-weight: 700;
+  }
+  .tabs__content.industries--tabs .tabs__heading {
+    font-size: 20px;
+    line-height: 35px;
+    font-weight: 500;
+  }
+  .tabs__content.industries--tabs .read__more__service {
+    margin-top: 40px;
+  }
 
-// === RESPONSIVE CSS 575PX End === //
-// === RESPONSIVE CSS 576PX START === //
-@media only screen and (max-width: 576px){
-    .header__logo img {
-        width: 138px; 
-        height: 28px; 
-    }
-    nav.nav__list{
-        top: 72px;
-    }
+  .tabs__content.industries--tabs .read__more__service {
+    font-size: 20px;
+  }
+  // Section Best Solution 767px */
+  .sec__best__solution .sec__heading {
+    font-size: 25px;
+    padding-bottom: 20px;
+    line-height: 35px;
+  }
+  .sec__best__solution .sec__best__solution__items {
+    padding-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 100%;
+    justify-content: space-between;
+  }
+  .sec__best__solution .sec__best__solution__items li {
+    margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 20px;
+    width: 50%;
+  }
+  .sec__best__solution {
+    padding-bottom: 50px;
+  }
 }
-// === RESPONSIVE CSS 576PX END === //
+// === RESPONSIVE CSS 575PX End === //
 
 // === RESPONSIVE CSS 480PX START === //
-@media only screen and (max-width: 480px){
-    //footer responsive css 480px 
-    .footer__text {
-        svg{
-            width: 71px;
-            height: 15px;
-        }
+@media only screen and (max-width: 480px) {
+  //footer responsive css 480px
+  .footer__text {
+    svg {
+      width: 71px;
+      height: 15px;
     }
-    .footer__form {
+  }
+  .footer__form {
+    border-radius: 4px;
+    .form__group {
+      border-radius: 4px;
+    }
+    input {
+      padding: 10px;
+    }
+    .submit__btn {
+      max-width: 27%;
+      width: 100%;
+      button {
+        padding: 8px 15px;
         border-radius: 4px;
-        .form__group{
-            border-radius: 4px;
-        }
-        input {
-            padding: 10px;
-        }
-        .submit__btn{
-            max-width: 27%;
-            width: 100%;
-            button {
-                padding: 8px 15px;
-                border-radius: 4px;
-                margin: 2px 2px 2px -2px;
-            }
-        }
+        margin: 2px 2px 2px -2px;
+      }
     }
+  }
+  .tabs__content.industries--tabs .read__more__service {
+    margin-top: 30px;
+  }
+  .tabs__content.industries--tabs .read__more__service {
+    font-size: 16px;
+  }
 }
-// === RESPONSIVE CSS 480PX END === //
-
-
-
