upload terms page

--- a/assets/scss/stylesheet.scss
+++ b/assets/scss/stylesheet.scss
@@ -13,12 +13,17 @@
 /* Partner Page Css Code  */
 @import "partner";
 
-/* Footer Css Code  */
-// header
+// industrie blockchain && industrie edge page css
 @import "industrie-blockchain";
 
 // career page css
 @import "career";
+
+// sustainable page css
+@import "sustainable";
+
+// company policy page css
+@import "company-policy";
 
 // footer css
 @import "footer";
