--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -33,8 +33,9 @@ body {
 button {
   cursor: pointer;
 }
-img {
+img ,svg{
   max-width: 100%;
+  height: auto;
 }
 li {
   list-style: none;
@@ -79,4 +80,7 @@ main {
   background: #2940d3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
+}
+.text-center{
+  text-align: center;
 }
