--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -114,7 +114,7 @@
 }
 
 .form__group {
-  background-color: #000000;
+  background-color: #0b0e1e;
   display: flex;
   align-items: center;
   border-radius: 10px;
@@ -132,7 +132,7 @@
 
 .footer__form input {
   padding: 17.5px 25px;
-  background-color: #000000;
+  background-color: transparent;
   color: #ffffff;
   border: none;
   font-style: normal;
