--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -84,3 +84,27 @@ main {
 .text-center{
   text-align: center;
 }
+.mb-40{
+  margin-bottom: clamp(20px,3vw,40px);
+}
+.mb-50{
+  margin-bottom: clamp(20px,4vw,50px);
+}
+.mb-30{
+  margin-bottom: clamp(10px,2vw,30px);
+}
+.mb-70{
+  margin-bottom: clamp(20px,5vw,70px);
+}
+.mt-80{
+  margin-top: clamp(20px,5vw,80px);
+}
+.mt-70{
+  margin-top: clamp(30px,5vw,70px);
+}
+.mt-50{
+  margin-top: clamp(20px,4vw,50px);
+}
+.mt-40{
+  margin-top: clamp(20px,3vw,40px);
+}
