--- a/assets/scss/company-policy.scss
+++ b/assets/scss/company-policy.scss
@@ -24,6 +24,14 @@
     font-size:clamp(16px,2vw,25px);
     line-height: clamp(20px,2vw,31px);
     color:#82868C;
+
+    a{
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+        color: #E3E6EB;
+        word-break: break-all;
+    }
 }
 .sec__content__wrapper{
     padding: 60px 0;
@@ -31,6 +39,22 @@
 .text-grey{
     color: #E3E6EB;
 }
+.policy__text{
+    &:last-child{
+        margin-bottom: 0;
+    }
+    ul{
+        padding-left: clamp(20px,4vw,40px);
+        li{
+            list-style: disc;
+            &::marker {
+                color: #82868c;
+                font-size: 24px;
+                vertical-align: middle;
+            }
+        }
+    } 
+} 
 .contact__information{
     margin-top: clamp(33px,9vw,133px);
     .contact__information__inner{
@@ -93,7 +117,7 @@
             margin-bottom: 10px;
         }
         .sec__text{
-            margin-top: clamp(50px,5vw,70px);
+            margin-top: clamp(20px,5vw,70px);
         }
     }
 }
