upload about page

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -84,6 +84,9 @@ main {
 .text-center{
   text-align: center;
 }
+.mb-30{
+  margin-bottom: clamp(15px,2vw,30px);
+}
 .mb-40{
   margin-bottom: clamp(20px,3vw,40px);
 }
