--- a/assets/scss/stylesheet.scss
+++ b/assets/scss/stylesheet.scss
@@ -22,6 +22,9 @@
 // sustainable page css
 @import "sustainable";
 
+// about us page css
+@import "about-us";
+
 // company policy page css
 @import "company-policy";
 
