--- a/assets/scss/industrie-blockchain.scss
+++ b/assets/scss/industrie-blockchain.scss
@@ -230,3 +230,14 @@
 }
 
 // Contact our team sec end
+
+
+svg {
+    transition: 0.6s;
+    path{
+        transition: 0.6s linear;
+    }
+    path.active{
+        transform: scale(1.2);
+    }
+}
