Update Contact Us Page

--- a/assets/scss/stylesheet.scss
+++ b/assets/scss/stylesheet.scss
@@ -25,6 +25,9 @@
 // company policy page css
 @import "company-policy";
 
+// Contact Us page css
+@import "contact-us";
+
 // footer css
 @import "footer";
 
