--- a/assets/scss/service.scss
+++ b/assets/scss/service.scss
@@ -204,11 +204,8 @@
     margin-top: 75px;
   }
 }
-.industries__tabs__button.active + div {
-  display: block;
-}
 .industries--tabs {
-  display: none;
+  opacity: 0;
 }
 
 .sec__service.sec--industries {
@@ -250,6 +247,7 @@
   }
   .sec__content {
     display: flex;
+    padding-bottom: 300px;
   }
 }
 
@@ -285,4 +283,8 @@
   .service__banner__img svg.active #Layer_1-2 path:nth-child(#{$i}) {
     animation: HeroSnake 1s linear ($i * 0.01) + s forwards;
   }
+}
+
+.tabs__button.ative ~ div {
+  display: block;
 }
